fixed firefox missing background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 color: #333; 
 width:650px;
 border: 2px solid #d4d4d4;
-background-image: -webkit-linear-gradient( #ffffff , #e5eecc 100px);
+background-image: linear-gradient( #ffffff , #e5eecc 100px);
 float:left;
 font-family:Lucida Sans Unicode;
 font-size: 20px;
